Prevent headers from wrapping in About NTX

--- a/public_html/css/custom-sections.css
+++ b/public_html/css/custom-sections.css
@@ -866,6 +866,7 @@
 
 #aboutNTX h4 a {
   color: #fff;
+  white-space: nowrap;
 }
 
 #aboutNTX h4 a:hover {
